Fix hover for sonification play button in dark mode and light mode

--- a/reactDashboard/src/components/DataCharts/DataCharts.css
+++ b/reactDashboard/src/components/DataCharts/DataCharts.css
@@ -94,6 +94,10 @@
   border-color: #cccccc;
 }
 
+.sonification-play-button:hover {
+  box-shadow: 5px 5px 5px #aaaaaa;
+}
+
 .sonification-play-button h5 {
   font-size: 0.75rem;
   color: #6c6c6c;
@@ -104,12 +108,10 @@
   color: #f2f2f2;
 }
 
-.sonification-play-button:hover {
-  box-shadow: 5px 5px 5px #aaaaaa;
-}
-
-.darkmode .sonification-play-button:hover {
+.darkmode .sonification-play-button:hover,
+.darkmode .sonification-play-button h5:hover {
   box-shadow: none;
+  background-color: #133a53;
 }
 
 .sonification-play-button.col {
